# CodeYX

./: .gitignore  CODEX.md  README.md  pyproject.toml  测试部门分模块测试总结.md
.github/workflows/: test.yml
codeyx/: __main__.py  agent.py  app.py  client.py  config.py  conversation.py  permission_dialog.py  plan_dialog.py  prompts.py  session_dialog.py  styles.tcss  validator.py
codeyx/agents/: __init__.py  fork.py  loader.py  notification.py  task_manager.py  tool_filter.py
codeyx/commands/: __init__.py  parser.py
codeyx/context/: __init__.py  manager.py
codeyx/hooks/: __init__.py  conditions.py  engine.py  executors.py  loader.py  models.py
codeyx/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
codeyx/memory/: __init__.py  auto_memory.py  instructions.py  session.py
codeyx/permissions/: __init__.py  checker.py  dangerous.py  modes.py
codeyx/runtime/: __init__.py  recovery.py  scheduler.py  state.py
codeyx/skills/: __init__.py  directory.py  executor.py  loader.py  parser.py
codeyx/teams/: __init__.py  backend_detect.py  coordinator.py  manager.py  models.py  spawn_inprocess.py  spawn_iterm2.py  spawn_tmux.py  task_protocol.py  (+1 more)
docs/: known-issues.md
mewcode/: __main__.py  agent.py  app.py  askuser_dialog.py  client.py  config.py  conversation.py  permission_dialog.py  plan_dialog.py  prompts.py  session_dialog.py  validator.py
scripts/: mewtest.sh  test.sh
tests/: conftest.py  interview-qa.md  optimization-plan.md  test_agent.py  test_commands.py  test_context.py  test_harness.py  test_hooks.py  test_mcp.py  test_memory.py  test_permissions.py  test_recovery.py  test_replacement_state.py  test_runtime.py  test_skills.py  test_subagent.py  test_teams.py  test_tool_search.py  test_worktree.py  verify_subagent.py
(+101 files in other folders)
