[project]
name = "codeyx"
version = "0.2.0"
description = "A terminal AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.1.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
codeyx = "codeyx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["codeyx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (requires real API keys)",
    "security: marks tests as security/penetration tests",
    "perf: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["codeyx"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
